# SlimeVR-Tracker-nRF

./: .gitignore  CMakeLists.txt  Kconfig  VERSION  VERSION_SRC  prj.conf  west.yml
.github/workflows/: workflow.yml
boards/: nrf52840dk_nrf52840.overlay  nrf54l15dk_nrf54l15_cpuapp.overlay
boards/nordic/promicro_uf2/: promicro_uf2.dts
boards/nordic/supermini_uf2/: supermini_uf2.dts  supermini_uf2_spi.dts
boards/nordic/test54l/: board.c  test54l_nrf54l15_cpuapp.dts
boards/slimevr/slimevrmini_p4r11_uf2/: Kconfig.slimevrmini_p4r11_uf2  board.yml  slimevrmini_p4r11_uf2.dts  slimevrmini_p4r11_uf2.yaml  slimevrmini_p4r11_uf2_defconfig
src/: assets.h  build_defines.h  config.c  config.h  console.c  console_colors.h  display.c  globals.h  hid.c  imu_led.c  main.c  thread_priority.h  usb.c  util.c
src/connection/: connection.c  connection.h  esb.c  esb.h  tdma.c  tdma.h
src/sensor/: calibration.c  calibration.h  sensor.c  sensor.h  sensor_none.c  sensor_none.h
src/sensor/fusion/: fusion_none.c  fusion_none.h  fusions.h
src/sensor/fusion/motionsense/: motionsense.c
src/sensor/fusion/vqf/: vqf.c  vqf.h
src/sensor/fusion/xiofusion/: xiofusion.c
src/sensor/imu/: BMI270.c  BMI270.h  ICM42688.c  ICM42688.h  ICM45686.c  ICM45686.h  LSM6DSM.c  LSM6DSO.c  LSM6DSV.c  LSM6DSV.h
src/system/: battery.c  battery.h  battery_tracker.c  led.c  led.h  power.c  status.c  status.h  system.c  system.h
